--- a/src/gameinfo_gui.ui
+++ b/src/gameinfo_gui.ui
@@ -241,7 +241,7 @@
       <item row="4" column="0">
        <widget class="QLabel" name="TextLabel9">
         <property name="text">
-         <string>Played at:</string>
+         <string>&amp;Played at:</string>
         </property>
         <property name="wordWrap">
          <bool>false</bool>
@@ -260,7 +260,7 @@
          </size>
         </property>
         <property name="text">
-         <string>Copyright:</string>
+         <string>&amp;Copyright:</string>
         </property>
         <property name="wordWrap">
          <bool>false</bool>
@@ -276,7 +276,7 @@
       <item row="4" column="3">
        <widget class="QLabel" name="TextLabel7">
         <property name="text">
-         <string>Date:</string>
+         <string>&amp;Date:</string>
         </property>
         <property name="wordWrap">
          <bool>false</bool>
@@ -299,7 +299,7 @@
       <item row="5" column="0">
        <widget class="QLabel" name="label">
         <property name="text">
-         <string>Event:</string>
+         <string>&amp;Event:</string>
         </property>
         <property name="buddy">
          <cstring>eventEdit</cstring>
@@ -309,7 +309,7 @@
       <item row="5" column="3">
        <widget class="QLabel" name="label_2">
         <property name="text">
-         <string>Round:</string>
+         <string>R&amp;ound:</string>
         </property>
         <property name="buddy">
          <cstring>roundEdit</cstring>
@@ -329,7 +329,7 @@
       <item row="1" column="0">
        <widget class="QLabel" name="TextLabel5">
         <property name="text">
-         <string>Handicap:</string>
+         <string>&amp;Handicap:</string>
         </property>
         <property name="wordWrap">
          <bool>false</bool>
@@ -405,7 +405,7 @@
       <item row="2" column="0">
        <widget class="QLabel" name="TextLabel6">
         <property name="text">
-         <string>Result:</string>
+         <string>&amp;Result:</string>
         </property>
         <property name="wordWrap">
          <bool>false</bool>
@@ -417,6 +417,29 @@
       </item>
       <item row="2" column="1" colspan="2">
        <widget class="QLineEdit" name="resultEdit"/>
+      </item>
+      <item row="3" column="3">
+       <widget class="QLabel" name="TextLabel7_2">
+        <property name="text">
+         <string>R&amp;uleset:</string>
+        </property>
+        <property name="wordWrap">
+         <bool>false</bool>
+        </property>
+        <property name="buddy">
+         <cstring>rulesEdit</cstring>
+        </property>
+       </widget>
+      </item>
+      <item row="3" column="4">
+       <widget class="QLineEdit" name="rulesEdit">
+        <property name="maximumSize">
+         <size>
+          <width>100</width>
+          <height>16777215</height>
+         </size>
+        </property>
+       </widget>
       </item>
      </layout>
     </widget>
@@ -460,6 +483,7 @@
   <tabstop>handicapSpin</tabstop>
   <tabstop>resultEdit</tabstop>
   <tabstop>copyrightEdit</tabstop>
+  <tabstop>rulesEdit</tabstop>
   <tabstop>placeEdit</tabstop>
   <tabstop>dateEdit</tabstop>
   <tabstop>eventEdit</tabstop>
