--- a/src/boardwindow_gui.ui
+++ b/src/boardwindow_gui.ui
@@ -115,7 +115,7 @@
              <item row="0" column="0">
               <layout class="QVBoxLayout" name="_2">
                <property name="spacing">
-                <number>6</number>
+                <number>0</number>
                </property>
                <property name="leftMargin">
                 <number>0</number>
@@ -268,6 +268,116 @@ When in score mode, left click to mark a group as dead, right click to mark it a
                   </layout>
                  </item>
                 </layout>
+               </item>
+               <item>
+                <widget class="QWidget" name="autoBox" native="true">
+                 <layout class="QHBoxLayout" name="horizontalLayout_6">
+                  <property name="leftMargin">
+                   <number>2</number>
+                  </property>
+                  <property name="topMargin">
+                   <number>2</number>
+                  </property>
+                  <property name="rightMargin">
+                   <number>2</number>
+                  </property>
+                  <property name="bottomMargin">
+                   <number>2</number>
+                  </property>
+                  <item>
+                   <widget class="QLabel" name="label_3">
+                    <property name="text">
+                     <string>Autoplay in progress</string>
+                    </property>
+                   </widget>
+                  </item>
+                  <item>
+                   <widget class="QToolButton" name="autoplayToolButton">
+                    <property name="text">
+                     <string>Stop autoplay</string>
+                    </property>
+                   </widget>
+                  </item>
+                  <item>
+                   <widget class="QToolButton" name="autoPauseButton">
+                    <property name="text">
+                     <string>...</string>
+                    </property>
+                    <property name="icon">
+                     <iconset resource="q4go.qrc">
+                      <normaloff>:/images/pause.png</normaloff>:/images/pause.png</iconset>
+                    </property>
+                    <property name="checkable">
+                     <bool>true</bool>
+                    </property>
+                   </widget>
+                  </item>
+                  <item>
+                   <widget class="QLabel" name="label_2">
+                    <property name="text">
+                     <string>Speed:</string>
+                    </property>
+                   </widget>
+                  </item>
+                  <item>
+                   <widget class="QSlider" name="autoSlider">
+                    <property name="sizePolicy">
+                     <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+                      <horstretch>0</horstretch>
+                      <verstretch>0</verstretch>
+                     </sizepolicy>
+                    </property>
+                    <property name="maximumSize">
+                     <size>
+                      <width>32767</width>
+                      <height>20</height>
+                     </size>
+                    </property>
+                    <property name="focusPolicy">
+                     <enum>Qt::NoFocus</enum>
+                    </property>
+                    <property name="toolTip">
+                     <string>Set the speed for autoplay, in half-second increments</string>
+                    </property>
+                    <property name="minimum">
+                     <number>1</number>
+                    </property>
+                    <property name="maximum">
+                     <number>40</number>
+                    </property>
+                    <property name="pageStep">
+                     <number>5</number>
+                    </property>
+                    <property name="value">
+                     <number>2</number>
+                    </property>
+                    <property name="orientation">
+                     <enum>Qt::Horizontal</enum>
+                    </property>
+                   </widget>
+                  </item>
+                  <item>
+                   <widget class="QLabel" name="autoSpeedLabel">
+                    <property name="text">
+                     <string>TextLabel</string>
+                    </property>
+                   </widget>
+                  </item>
+                  <item>
+                   <spacer name="horizontalSpacer">
+                    <property name="orientation">
+                     <enum>Qt::Horizontal</enum>
+                    </property>
+                    <property name="sizeHint" stdset="0">
+                     <size>
+                      <width>40</width>
+                      <height>20</height>
+                     </size>
+                    </property>
+                   </spacer>
+                  </item>
+                 </layout>
+                </widget>
                </item>
               </layout>
              </item>
@@ -2635,6 +2745,7 @@ After placing and/or undo release button for returning to starting point automat
     <addaction name="navPrevFigure"/>
     <addaction name="navNextFigure"/>
     <addaction name="separator"/>
+    <addaction name="navAutoplay"/>
     <addaction name="navNthMove"/>
     <addaction name="separator"/>
     <addaction name="navMainBranch"/>
@@ -2776,6 +2887,8 @@ After placing and/or undo release button for returning to starting point automat
    <addaction name="navStartVar"/>
    <addaction name="navNextBranch"/>
    <addaction name="navIntersection"/>
+   <addaction name="separator"/>
+   <addaction name="navAutoplay"/>
   </widget>
   <widget class="QToolBar" name="editBar">
    <property name="windowTitle">
@@ -4185,6 +4298,24 @@ Export current board to ASCII diagrams, for use in web forums.</string>
    </property>
    <property name="text">
     <string>Chinese</string>
+   </property>
+  </action>
+  <action name="navAutoplay">
+   <property name="checkable">
+    <bool>true</bool>
+   </property>
+   <property name="icon">
+    <iconset resource="q4go.qrc">
+     <normaloff>:/BoardWindow/images/boardwindow/autoplay.png</normaloff>:/BoardWindow/images/boardwindow/autoplay.png</iconset>
+   </property>
+   <property name="text">
+    <string>&amp;Autoplay</string>
+   </property>
+   <property name="toolTip">
+    <string>Autoplay</string>
+   </property>
+   <property name="shortcut">
+    <string>Ctrl+Alt+P</string>
    </property>
   </action>
  </widget>
