--- a/src/q4go.qrc
+++ b/src/q4go.qrc
@@ -90,6 +90,7 @@
     <file>sgfs/connections.sgf</file>
     <file>sgfs/captures.sgf</file>
     <file>sgfs/openings.sgf</file>
+    <file>sgfs/endgame.sgf</file>
     <file>sgfs/terminology.sgf</file>
   </qresource>
   <qresource prefix="/">
